--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
             <ul class="list"></ul>
             <div class="footer">
-                <input type="button" value="5個待完成項目">
-                <input type="button" value="清除已完成項目">
+                <div class="restbox">
+                    <p class="rest">0個待完成項目</p>
+                </div>
+                <button class="clear" value="待完成">清除已完成項目</button>                
             </div>
         </div>      
         
