--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="main_list">
             <div class="mian_btn">
-                <input type="button" value="全部" class="btn btn_active">
+                <input type="button" value="全部" class="btn">
                 <input type="button" value="已完成" class="btn">
                 <input type="button" value="待完成" class="btn">
             </div>           
