--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta title="Todolist">
-    <meta >
+    <meta name="Todolist" content="JavaScript Todolist"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="scss/all.css">
 </head>
 
 <body>
-    <link rel="stylesheet" href="scss/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
     <h1>TODO LIST</h1>
     <div class="container">
         <div class="text_bar">
